# ALEX_DISCORD_AUTH1

./: 'TESTDB'  4qq  BOT.py  Flask.py  Procfile  TESTDB  config.ini  main.py  pyproject.toml
template/: BLACKLIST.html  NG.html  OK.html  VPN.html
